implement collections algorithms

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,7 +70,7 @@ add_custom_target(
     bin/snowball_test -s -d yes
     #stops at first error
     #bin/snowball_test -a
-    #bin/snowball_test -s [collections]
+    #bin/snowball_test -s [algorithms]
     DEPENDS bin/snowball_test
     )
     
