--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,17 @@
 language: cpp
+addons:
+ apt:
+   sources:
+   - ubuntu-toolchain-r-test
+   packages:
+   - gcc-4.8
+   - g++-4.8
+   - cmake
 script:
 - mkdir build
 - cd build
+- cmake --version
+- gcc --version
+- make --version
 - cmake ..
 - make test
