--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,40 @@
 language: cpp
-addons:
- apt:
-   sources:
-   - ubuntu-toolchain-r-test
-   packages:
-   - gcc-4.8
-   - g++-4.8
-   - cmake
+sudo: false
+
+cache:
+  ccache: true
+  directories:
+    - $HOME/.ccache
+    
+matrix:
+  include:
+  - os: linux
+    compiler: gcc
+    addons: &gcc48
+    apt:
+      sources: ['ubuntu-toolchain-r-test']
+      packages: ['g++-4.8']
+    env: COMPILER='ccache g++-4.8' BUILD_TYPE='Release'
+
+  - os: linux
+    compiler: gcc
+    addons: *gcc48
+    env: COMPILER='ccache g++-4.8' BUILD_TYPE='Debug'
+
+install:
+  - DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
+  - mkdir -p ${DEPS_DIR} && cd ${DEPS_DIR}
+  - |
+    if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
+      CMAKE_URL="http://www.cmake.org/files/v3.3/cmake-3.3.2-Linux-x86_64.tar.gz"
+      mkdir cmake && travis_retry wget --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
+      export PATH=${DEPS_DIR}/cmake/bin:${PATH}
+    fi
 script:
 - mkdir build
 - cd build
 - cmake --version
 - gcc --version
 - make --version
-- cmake ..
+- cmake .. -DCMAKE_BUILD_TYPE=${BUILD_TYPE}
 - make test
