--- a/.travis.yml
+++ b/.travis.yml
@@ -129,16 +129,24 @@ matrix:
 
 install:
   - DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
-  - mkdir -p ${DEPS_DIR} && cd ${DEPS_DIR}
-  - |
-    if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
-      CMAKE_URL="http://www.cmake.org/files/v3.3/cmake-3.3.2-Linux-x86_64.tar.gz"
-      mkdir cmake && travis_retry wget --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
-      export PATH=${DEPS_DIR}/cmake/bin:${PATH}
-    elif [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then
-      brew install cmake ccache
-    fi
-  - ls -la ${DEPS_DIR}/cmake/dir
+  - DEPS_SRC="${TRAVIS_BUILD_DIR}/deps/src"
+  - mkdir -p ${DEPS_SRC} && cd ${DEPS_SRC}
+  - CMAKE_URL="https://cmake.org/files/v2.8/cmake-2.8.12.2.tar.gz"
+  - wget --quiet -O ${CMAKE_URL}
+  - tar -zxf cmake-2.8.12.2.tar.gz
+  - mkdir build-cmake-2.8.12.2 && cd build-cmake-2.8.12.2
+  - ../cmake-2.8.12.2/configure --prefix=${DEPS_DIR}
+  - make
+  - make install
+  - export PATH={DEPS_DIR}/bin:$PATH
+  #- |
+  #  if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
+  #    CMAKE_URL="http://www.cmake.org/files/v3.3/cmake-3.3.2-Linux-x86_64.tar.gz"
+  #    mkdir cmake && travis_retry wget --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
+  #    export PATH=${DEPS_DIR}/cmake/bin:${PATH}
+  #  elif [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then
+  #    brew install cmake ccache
+  #  fi
 
 before_script:
   - export CXX=${COMPILER}
