--- a/.travis.yml
+++ b/.travis.yml
@@ -134,6 +134,7 @@ install:
   - CMAKE_VER="cmake-2.8.12.2"
   - CMAKE_ARC="${CMAKE_VER}.tar.gz"
   - CMAKE_URL="https://cmake.org/files/v2.8/${CMAKE_ARC}"
+  - echo wget --quiet -O ${CMAKE_ARC} ${CMAKE_URL}
   - wget --quiet -O ${CMAKE_ARC} ${CMAKE_URL}
   - tar -zxf ${CMAKE_ARC}
   - mkdir build-${CMAKE_VER} && cd build-${CMAKE_VER}
