--- a/.travis.yml
+++ b/.travis.yml
@@ -133,7 +133,7 @@ install:
   - mkdir -p ${DEPS_SRC} && cd ${DEPS_SRC}
   - CMAKE_VER="cmake-2.8.12.2"
   - CMAKE_ARC="${CMAKE_VER}.tar.gz"
-  - CMAKE_URL="https://cmake.org/files/v2.8/${CMAKE_ARC}"
+  - CMAKE_URL="http://cmake.org/files/v2.8/${CMAKE_ARC}"
   - echo wget --quiet -O ${CMAKE_ARC} ${CMAKE_URL}
   - wget --quiet -O ${CMAKE_ARC} ${CMAKE_URL}
   - tar -zxf ${CMAKE_ARC}
