--- a/.travis.yml
+++ b/.travis.yml
@@ -152,10 +152,12 @@ install:
   #  fi
 
 before_script:
+  - export PATH=${TRAVIS_BUILD_DIR}/deps/bin:${PATH}
   - export CXX=${COMPILER}
   - cd ${TRAVIS_BUILD_DIR}
   - pwd
   - ls -la
+  - which cmake
   - mkdir build
   - cd build
   - cmake .. -DCMAKE_BUILD_TYPE=${BUILD_TYPE}
