--- a/.travis.yml
+++ b/.travis.yml
@@ -104,27 +104,27 @@ matrix:
       env: COMPILER='g++-5' BUILD_TYPE='Debug'
 
 
-    ## 3/ OSX Clang Builds
-    #- os: osx
-    #  osx_image: xcode6.4
-    #  compiler: clang
-    #  env: COMPILER='clang++' BUILD_TYPE='Debug'
+    # 3/ OSX Clang Builds
+    - os: osx
+     osx_image: xcode6.4
+     compiler: clang
+     env: COMPILER='clang++' BUILD_TYPE='Debug'
 
-    #- os: osx
-    #  osx_image: xcode6.4
-    #  compiler: clang
-    #  env: COMPILER='clang++' BUILD_TYPE='Release'
+    - os: osx
+     osx_image: xcode6.4
+     compiler: clang
+     env: COMPILER='clang++' BUILD_TYPE='Release'
 
 
-    #- os: osx
-    #  osx_image: xcode7
-    #  compiler: clang
-    #  env: COMPILER='clang++' BUILD_TYPE='Debug'
+    - os: osx
+     osx_image: xcode7
+     compiler: clang
+     env: COMPILER='clang++' BUILD_TYPE='Debug'
 
-    #- os: osx
-    #  osx_image: xcode7
-    #  compiler: clang
-    #  env: COMPILER='clang++' BUILD_TYPE='Release'
+    - os: osx
+     osx_image: xcode7
+     compiler: clang
+     env: COMPILER='clang++' BUILD_TYPE='Release'
 
 
 install:
